fixed corner flickering bug

--- a/Client/src/components/Slider/Slider.scss
+++ b/Client/src/components/Slider/Slider.scss
@@ -34,7 +34,7 @@
     justify-content: center;
     align-items: center;
 
-    transition: 250ms all;
+    transition: all 0.2s;
 
     &:hover {
         // transform: scaleX(1.39) scaleY(1.78);
@@ -47,11 +47,11 @@
     }
 
     &:first-child:hover {
-        margin: 0 110px;
+        margin: 0 50px;
     }
 
     &:last-child:hover {
-        margin: 0 -110px;
+        margin: 0 -50px;
     }
 }
 
